--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@syncfusion/ej2-react-calendars": "^24.2.3",
     "axios": "^1.6.7",
+    "cookie": "^0.6.0",
     "dotenv": "^16.4.2",
     "flowbite-react": "^0.7.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
@@ -28,7 +30,8 @@
     "react-router": "^6.21.3",
     "react-router-dom": "^6.21.3",
     "react-social-login-buttons": "^3.9.1",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
