--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.1.0",
     "@syncfusion/ej2-react-calendars": "^24.2.3",
+    "@tensorflow/tfjs": "^3.19.0",
     "axios": "^1.6.7",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.2",
@@ -31,7 +32,10 @@
     "react-router-dom": "^6.21.3",
     "react-social-login-buttons": "^3.9.1",
     "react-toastify": "^10.0.4",
-    "redux-persist": "^6.0.0"
+    "react-webcam": "^5.2.0",
+    "redux-persist": "^6.0.0",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
