--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^9.1.0",
     "react-router": "^6.21.3",
     "react-router-dom": "^6.21.3",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-social-login-buttons": "^3.9.1",
     "react-toastify": "^10.0.4",
     "react-webcam": "^5.2.0",
