--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
+    "peer": "^1.0.2",
     "socket.io": "^4.7.4",
     "textflow.js": "^0.1.4",
-    "twilio": "^4.22.0"
+    "twilio": "^4.22.0",
+    "uuid": "^9.0.1"
   }
 }
