--- a/client/package.json
+++ b/client/package.json
@@ -23,10 +23,12 @@
     "dotenv": "^16.4.2",
     "flowbite-react": "^0.7.2",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.373.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.21.3",
     "react-router-dom": "^6.21.3",
