--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "socket.io": "^4.7.4",
     "textflow.js": "^0.1.4",
     "twilio": "^4.22.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.16.0"
   }
 }
